--- a/index.html
+++ b/index.html
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Pixel Brush Texture Creator</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Pixel Brush Creator</h1>
-        <nav>
-            <a href="#" id="helpLink">Help</a>
-            <button id="invertBtn">I</button>
-            <button id="uploadBtn">↑</button>
-            <button id="downloadBtn">↓</button>
-        </nav>
-    </header>
 
-    <main>
-        <div class="controls">
-<div class="size-controls">
-    <div class="input-group">
-        <button class="step-btn" data-input="canvasWidth" data-action="decrement">-</button>
-        <input type="number" id="canvasWidth" step="1" min="1" max="15" value="10" readonly>
-        <button class="step-btn" data-input="canvasWidth" data-action="increment">+</button>
-    </div>
-    <span>x</span>
-    <div class="input-group">
-        <button class="step-btn" data-input="canvasHeight" data-action="decrement">-</button>
-        <input type="number" id="canvasHeight" step="1" min="1" max="15" value="10" readonly>
-        <button class="step-btn" data-input="canvasHeight" data-action="increment">+</button>
-    </div>
-</div>    <div class="zoom-control">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Pixel Brush Texture Creator</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header>
+    <h1>Pixel Brush Creator</h1>
+    <nav>
+      <a href="#" id="helpLink">Help</a>
+      <button id="invertBtn">I</button>
+      <button id="uploadBtn">↑</button>
+      <button id="downloadBtn">↓</button>
+    </nav>
+  </header>
+
+  <main>
+    <div class="controls">
+      <div class="size-controls">
+        <div class="input-group">
+          <button class="step-btn" data-input="canvasWidth" data-action="decrement">-</button>
+          <input type="number" id="canvasWidth" step="1" min="1" max="15" value="10" readonly>
+          <button class="step-btn" data-input="canvasWidth" data-action="increment">+</button>
+        </div>
+        <span>x</span>
+        <div class="input-group">
+          <button class="step-btn" data-input="canvasHeight" data-action="decrement">-</button>
+          <input type="number" id="canvasHeight" step="1" min="1" max="15" value="10" readonly>
+          <button class="step-btn" data-input="canvasHeight" data-action="increment">+</button>
+        </div>
+      </div>
+      <div class="zoom-control">
         <span id="scaleDisplay">1:20</span>
         <input type="range" id="zoomSlider" min="15" max="30" value="20">
-    </div>
-</div>
+        <input type="range" id="editorZoomSlider" min="1" max="100" value="50">
+        <span id="editorScaleDisplay">1:1</span>
 
-<div id="previewContainer">
-    <canvas id="previewCanvas"></canvas>
-    <div class="color-pickers">
+      </div>
+    </div>
+
+    <div id="previewContainer">
+      <canvas id="previewCanvas"></canvas>
+      <div class="color-pickers">
         <input type="color" id="blackColorPicker" value="#000000">
         <input type="color" id="whiteColorPicker" value="#ffffff">
+      </div>
     </div>
-</div>
 
-        <div id="canvasContainer">
-            <canvas id="pixelCanvas"></canvas>
-        </div>
-    </main>
+    <div id="canvasContainer">
+      <canvas id="pixelCanvas"></canvas>
+    </div>
+  </main>
 
-    <input type="file" id="fileInput" style="display: none;" accept="image/png">
-    <script src="script.js"></script>
+  <input type="file" id="fileInput" style="display: none;" accept="image/png">
+  <script src="script.js"></script>
 </body>
+
 </html>
